<resources>
    <string name="app_name">Popular Movies 2.2</string>
    <string name="error_message">Oops! Something went wrong. Please try again. </string>
    <string name="sort_most_popular">Most Popular</string>
    <string name="sort_top_rated">Top Rated</string>
    <string name="sort_favorite">Favorites</string>
    <string name="user_rating_label">User Rating</string>
    <string name="release_date_label">Release Date</string>
    <string name="synopsis_label">Synopsis</string>
    <string name="reviews_label">Reviews</string>
    <string name="trailers_label">Trailers</string>
    <string name="Error_NoMovieData">No Movie data</string>
    <string name="added">Added to favorites</string>
    <string name="removed">Removed from favorites</string>
    <string name="details_label">Details</string>
</resources>
