<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetails">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_synopsis"
        app:layout_constraintTop_toBottomOf="@+id/tv_synopsis"
        tools:context=".MovieDetails">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="@dimen/movie_icon_width"
            android:layout_height="@dimen/movie_icon_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:paddingStart="@dimen/padding"
            android:paddingTop="@dimen/padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title" />

        <TextView
            android:id="@+id/tv_header_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:paddingStart="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/user_rating_label"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_header_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/release_date_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/iv_image"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_date"
            tools:text="10/10/2010" />

        <TextView
            android:id="@+id/tv_header_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/synopsis_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

        <TextView
            android:id="@+id/tv_synopsis"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_synopsis" />

        <TextView
            android:id="@+id/tv_header_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/trailers_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

        <TextView
            android:id="@+id/tv_trailers"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_trailers" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailers"></android.support.v7.widget.RecyclerView>

        <View
            android:id="@+id/view"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/rv_trailers" />

        <TextView
            android:id="@+id/tv_header_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/reviews_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/rv_trailers" />

        <TextView
            android:id="@+id/tv_reviews"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_reviews" />

        <ImageView
            android:id="@+id/iv_favButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:paddingTop="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:src="@drawable/ic_favorite_border_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_header_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_rating" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>